    (Daryn Sharp via stevel)

    HADOOP-11685. StorageException complaining " no lease ID" during HBase
    distributed log splitting (Duo Xu via cnauroth)

    HADOOP-12440. TestRPC#testRPCServerShutdown did not produce the desired
    thread states before shutting down. (Xiao Chen via mingma)

    HADOOP-12691. Add CSRF Filter for REST APIs to Hadoop Common.
    (Larry McCay via cnauroth)

  OPTIMIZATIONS

    HADOOP-7713. dfs -count -q should label output column (Jonathan Allen
    via aw)

    HADOOP-11772. RPC Invoker relies on static ClientCache which has
    synchronized(this) blocks. (wheat9)

    HADOOP-12317. Applications fail on NM restart on some linux distro
    because NM container recovery declares AM container as LOST
    (adhoot via rkanter)

  BUG FIXES
    HADOOP-11802: DomainSocketWatcher thread terminates sometimes after there
    is an I/O error during requestShortCircuitShm (cmccabe)

    HADOOP-11859. PseudoAuthenticationHandler fails with httpcomponents v4.4.
    (Eugene Koifman via jitendra)

    HADOOP-12052 IPC client downgrades all exception types to IOE, breaks
    callers trying to use them. (Brahma Reddy Battula via stevel)

    HADOOP-12073. Azure FileSystem PageBlobInputStream does not return -1 on
    EOF. (Ivan Mitic via cnauroth)

    HADOOP-12095. org.apache.hadoop.fs.shell.TestCount fails.
    (Brahma Reddy Battula via aajisaka)

    HADOOP-12076. Incomplete Cache Mechanism in CredentialProvider API.
    (Larry McCay via cnauroth) 

    HADOOP-8151. Error handling in snappy decompressor throws invalid
    exceptions. (Matt Foley via harsh)

    HADOOP-12438. TestLocalFileSystem tests can fail on Windows after HDFS-8767
    fix for handling pipe. (cnauroth)

    HADOOP-11918. Listing an empty s3a root directory throws FileNotFound.
    (Lei (Eddy) Xu via cnauroth)

    HADOOP-12437. Allow SecurityUtil to lookup alternate hostnames.
    (Arpit Agarwal)

    HADOOP-12089. StorageException complaining " no lease ID" when updating